--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^11.0.1",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
@@ -21,7 +22,10 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.1.1",
     "@vitest/ui": "^2.1.1",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.8",
     "vitest": "^2.1.1"
   }
