--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/react,firebase,visualstudiocode,macos,windows
 
 
-firebase.jsserver/.env
+firebase.js
+
+server/.env
