--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "firebase": "^11.0.1",
+    "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "lucide-react": "^0.456.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
